correction on gaps

--- a/style/mainpage.css
+++ b/style/mainpage.css
@@ -990,7 +990,7 @@ button.next {
     gap: 90px;
 }
 .step-container>div{
-    gap: 80px;
+    gap: 60px;
 }
 /* PKG SECTION */
 .pkg img{
